--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-<!--   	<link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'> -->
-<!--   	<body bgcolor="#FF6347"> -->
-	</head>
+    <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
+    <link  rel='stylesheet' type='text/css' href="css/style.css">
+  </head>
 
   <body>
 		<h1>DJ Edmonds Remix</h1>
