--- a/views/index.erb
+++ b/views/index.erb
@@ -26,7 +26,7 @@
           </div>
           <div class="input-field col s6">
             <div class="white" id="speech-bubble">
-              <textarea id="textarea1" class="materialize-textarea" placeholder="Type Message" name="messagefor                text"></textarea>
+              <textarea id="textarea1" class="materialize-textarea" placeholder="Type Message" name="sentence"></textarea>
             </div>
           <button class="btn waves-effect waves-light teal darken-4" type="submit" name="action">Make Me Sound Smart!
             <i class="large material-icons right">spellcheck</i>
